# sst-gate

./: CMakeLists.txt  LICENSE  README.md  sector_segmented_mirrors.hpp  segmented_mirrors.hpp  sst_gate_class.hpp  sst_gate_data_output.hpp  sst_gate_globals.hpp  sst_gate_plotter.hpp  sst_gate_psf.hpp  sst_gate_test.cpp  sst_gate_test_performance.hpp
extras/: compile.sh  sst_gate_test
extras/zemax_data_files/: cherenkov_4meter_EVENasphereNEW_v17.SES  cherenkov_4meter_EVENasphereNEW_v17.zmx
include/: sst_gate_data_output.hpp  sst_gate_plotter.hpp  sst_gate_psf.hpp  sst_gate_test_performance.hpp
square/: data_test_15042015.txt  effective_area_test_15042015.eps  psf_deg_test_15042015.eps  spot_ON_versus_OFF_test_15042015.eps
src/: CMakeLists.txt  sst_gate_test.cpp
sst_gate_test.dSYM/Contents/: Info.plist
sst_gate_test.dSYM/Contents/Resources/DWARF/: sst_gate_test
